--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,6 @@ APP_SECRET=9976aaa47a3e9f324caa12427da3910d
 
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USER=6535468303d4b7
-MAIL_PASS=d3933cb3bb9bda
+MAIL_USER=
+MAIL_PASS=
 
